Fix textbox overflow

--- a/sass/utils/_flex.scss
+++ b/sass/utils/_flex.scss
@@ -2,6 +2,7 @@
 
 .flex {
   display: flex;
+  width: 100%;
   
   &.row {
     flex-direction: column;
